api/1.4.0/docs/assets/style.css
/* ... */
@media (min-width: 770px) and (max-width: 1399px) {
    .col-sidebar {
        max-height: calc(100vh - 2rem - 42px);
        overflow: auto;
        position: sticky;
        top: 42px;
        padding-top: 1rem;
    }
    .site-menu {
        margin-top: 1rem;
    }
}

/* two sidebars */
@media (min-width: 1200px) {
    .container-main {
        grid-template-columns: minmax(0, 1fr) minmax(0, 2.5fr) minmax(0, 20rem);
        grid-template-areas: "sidebar content toc";
    }

    .col-sidebar {
        display: contents;
    }

    .page-menu {
        grid-area: toc;
        padding-left: 1rem;
    }
    .site-menu {
        grid-area: sidebar;
    }

    .site-menu {
        margin-top: 1rem 0;
    }

    .page-menu,
    .site-menu {
        max-height: calc(100vh - 2rem - 42px);
        overflow: auto;
        position: sticky;
        top: 42px;
    }
}

